--- a/estructura de archivos/public/css/general.css
+++ b/estructura de archivos/public/css/general.css
@@ -30,10 +30,11 @@ ul, ol {
     margin: 0;
     padding: 0;
 }
-.nav-link{
-    color:var(--bs-navbar-active-color);
+.nav-link {
+    color: white;
 }
-/*correcciones boostrap*/
+
+/*correcciones Bootstrap*/
 .alertIcon{
     color: var(--C_Pink_Logo);
 }
