--- a/estructura de archivos/public/css/index.css
+++ b/estructura de archivos/public/css/index.css
@@ -114,9 +114,20 @@
     white-space: normal;
 }
 
-.main__section--product-content_offers:hover i {
+/* .main__section--product-content_offers:hover i {
     transform: rotate(360deg);
     color: var(--C_Green_Razer);
+} */
+
+.main__section--product-content_offers:hover i {
+    animation: shake 2s ease infinite;
+    color: var(--C_Green_Razer);
+}
+
+@keyframes shake {
+	0%, 100% {transform: translateX(0);}
+	10%, 30%, 50%, 70%, 90%{transform: translateX(-10px);}
+	20%, 40%, 60%, 80%{transform: translateX(5px);}
 }
 
 .main-section-price-ofert {
