--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -35,13 +35,15 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <h2>Juegos en Oferta</h2>
+        <h2>Productos en Oferta</h2>
         <section class="main__section--product">
             <% productsInSale.forEach(({id, name, price, image, discount})=> { %>
                 <%- include("./partials/product",{id, name, price, image, discount, toThousand }) %>
                 <% }) %>
         </section>
-        <div class="main-content-buttom"><a href="./products/productsRecommended.ejs"><button class="main-display-button">Ver más</button></a></div>
+
+        <div class="main-content-buttom"><a href="/section/1"><button class="main-display-button">Ver más</button></a></div>
+
         <div id="carouselExampleCaptions" style="margin-bottom: 0px;" class="carousel slide second-carousel--banner" data-bs-ride="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -74,14 +76,15 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <h2>Juegos Recomendados</h2>
+        <h2>Productos Recomendados</h2>
         <section class="main__section--product ">
             <% productsRecommended.forEach(({id, name, price, image, discount})=> { %>
                 <%- include("./partials/product",{id, name, price, image, discount, toThousand }) %>
                 <% }) %>
         </section>
 
-        <div class="main-content-buttom"><button class="main-display-button">Ver más</button></div>
+        <div class="main-content-buttom"><a href="/section/2"><button class="main-display-button">Ver más</button></a></div>
+
 <!--         <h2>Producto de nuestros usuarios</h2>
         <section class="main__section--product">
             <% productsOfUsers.forEach(({id, name, price, image, discount})=> { %>
