products view fixed in recommended and insale

--- a/estructura de archivos/public/css/results.css
+++ b/estructura de archivos/public/css/results.css
@@ -17,13 +17,15 @@
     flex-wrap: wrap;
 }
 
+.main__section--product-article {
+    
+}
 
 @media (min-width: 768px){
 .main__section--product-result {
     width: 100%;
     display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
+    flex-wrap: wrap;
 }
 
 }
