--- a/estructura de archivos/src/views/partials/productsRecommended.ejs
+++ b/estructura de archivos/src/views/partials/productsRecommended.ejs
@@ -1,4 +1,4 @@
-<section class="carrito__main__section--pruductos-recomendados">
+<!-- <section class="carrito__main__section--pruductos-recomendados">
     <p class="carrito__main__section--pruductos-title">Productos que pueden interesarte</p>
     <div class="linea">
         <hr>
@@ -48,4 +48,4 @@
         </div>
 
     </article>
-</section>
+</section> -->
