--- a/estructura de archivos/src/views/partials/footer.ejs
+++ b/estructura de archivos/src/views/partials/footer.ejs
@@ -3,15 +3,6 @@
     <a href="/"><img src="/images/DALF-LOGO.png" alt="Logo" /></a>
   </section>
   <section class="footer_nav">
-    <nav class="footer_nav-home">
-      <!-- <p>Menu</p>
-      <ul type="none">
-        <li><a href="/">Home</a></li>
-        <li><a href="/users/profile">Mi perfil</a></li>
-        <li><a href="/products/productsLoad">Vender</a></li>
-        <li><a href="/users/login">Login</a></li>
-      </ul> -->
-    </nav>
     <nav class="footer_nav-aboutUs">
       <p>Sobre Nosotros:</p>
       <ul type="none">
@@ -21,15 +12,6 @@
         <li><a href="">Avisos legales.</a></li>
       </ul>
     </nav>
-    <nav class="footer_nav-aboutUs">
-      <p>¿Te ayudamos?</p>
-      <ul type="none">
-        <li><a href="">Ayuda</a></li>
-        <li><a href="">Preguntas frecuentes</a></li>
-        <li><a href="">Contactanos</a></li>
-        <li><a href="">...</a></li>
-      </ul>
-    </nav>
 <!--     <div class="footer_nav-app">
       <p>Descarga nuestra app</p>
       <a href=""><img src="/images/google-play.png" alt="" /></a>
@@ -37,7 +19,7 @@
     </div> -->
   </section>
   <section class="payment-method-section">
-    <p class="payment-method-title">Metodos de pago</p>
+    <p class="payment-method-title">Métodos de Pago:</p>
     <div class="payment-method">
       <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/visa@2x.png"
         class="method-payment-logo" alt="visa" />
