--- a/estructura de archivos/public/css/footer.css
+++ b/estructura de archivos/public/css/footer.css
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     background-color: var(--C_Dark);
     width: 100%;
-    margin: 2em 0 0 0;
+    border-top: 5px solid var(--C_Discord);
 }
 
 .footer--logo {
@@ -41,6 +41,11 @@
     text-align: center;
 }
 
+.footer_nav-aboutUs p {
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
 .footer_nav-home ul,
 .footer_nav-aboutUs ul {
     padding: 5px;
@@ -72,7 +77,8 @@
 .footer_social_networks-title{
     width: 100%;
     text-align: center;
-    font-size: 16px;
+    font-size: 1.2rem;
+    font-weight: 600;
     padding: 5px;
 }
 .method-payment-logo {
@@ -109,15 +115,18 @@
     width: 42px;
     height: 42px;
     border-radius: 50%;
-    border: 1px solid var(--C_Lightblue_Logo);
+    border: 2px solid var(--C_Lightblue_Logo);
+    transition: 0.9s all ease;
 }
 
 .footer__lastsection__navbar a:hover figure {
-    border: 1px solid var(--C_Pink_Logo)
+    border: 2px solid var(--C_Pink_Logo);
+    transform: rotate(360deg);
 }
 
 .footer__lastsection__navbar a:hover i {
-    color: var(--C_Pink_Logo)
+    color: var(--C_Pink_Logo);
+    transform: rotate(360deg);
 }
 
 .footer__lastsection__navbar i {
@@ -128,6 +137,7 @@
     text-align: center;
     color: #dee2e6;
     width: 100%;
+    margin: 0.5em;
 }
 
 @media (min-width: 768px) {
@@ -140,7 +150,6 @@
         color: #dee2e6;
         display: flex;
         justify-content: center;
-        padding: 10px 0px 0px;
     }
 
     .footer__lastsection__navbar ul li {
@@ -158,9 +167,9 @@
     .footer_nav-home,
     .footer_nav-aboutUs,
     .footer_nav-app {
-        width: 23%;
+        width: 100%;
         padding: 5px;
-        text-align: start;
+        text-align: center;
     }
 
     .footer__formas-de-pago img {
