--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -52,17 +52,17 @@
             </div>
             <div class="carousel-inner second-carousel--banner">
                 <div class="carousel-item active">
-                    <img src="/images/banners/banner-de-dalf-store.webp" class="d-block w-100 main--img-banner" alt="">
+                    <img src="/images/banners/ofertas-de-navidad.jpg" class="d-block w-100 main--img-banner" alt="">
                     <div class="carousel-caption d-none d-md-block main--carousel-p-color">
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banners/banner-de-dalf-store1.webp" class="d-block w-100 main--img-banner" alt="">
+                    <img src="/images/banners/juegos-menos-de-1000.jpg" class="d-block w-100 main--img-banner" alt="">
                     <div class="carousel-caption d-none d-md-block main--carousel-p-color">
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banners/banner-de-dalf-store2.webp" class="d-block w-100 main--img-banner" alt="">
+                    <img src="/images/banners/10off-adicional.jpg" class="d-block w-100 main--img-banner" alt="">
                     <div class="carousel-caption d-none d-md-block main--carousel-p-color">
                     </div>
                 </div>
