--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -208,9 +208,8 @@
                                         <div class="product-detail">
                                             <h2>Acerca de este artículo:</h2>
                                             <ul>
-                                                <li><i class="fa-regular fa-circle-check"></i> Disponibilidad: <span>en stock</span></li>
-                                                <li><i class="fa-regular fa-circle-check"></i> categoría: <span>accion</span></li>
-                                                <li><i class="fa-regular fa-circle-check"></i> Gastos de envío: <span>Gratis</span></li>
+                                                <li><i class="fa-regular fa-circle-check"></i> Stock: <span><%= product.stock %> unidades.</span></li>
+                                                <li><i class="fa-regular fa-circle-check"></i> Categoría: <span><%= product.category.name %>.</span></li>
                                             </ul>
                                         </div>
                                         <div class="purchase-info">
