cart on index done

--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -12,9 +12,9 @@
 
                     <div class="header__top--general-navigation_button">
 
-                        <form action="/search" method="GET" class="header--searchbar">
-                            <input type="text" class="header__searchbar--input" name="keywords"
-                                placeholder="Buscá tu producto..." required />
+                        <form action="/search" method="GET" class="header--searchbar" id="search-header">
+                            <input id="search-header-input" type="text" class="header__searchbar--input" name="keywords"
+                                placeholder="Buscá tu producto..."  />
                             <i class="fa fa-search"></i>
                         </form>
 
