--- a/estructura de archivos/src/views/partials/product.ejs
+++ b/estructura de archivos/src/views/partials/product.ejs
@@ -8,9 +8,10 @@
                 <% if (discount> 0) { %>
                 <p class="main__section--product-discount"><%= discount %>% OFF</p>
                 <% } %>
-                <i class="fa-solid fa-cart-shopping"></i>
+                <i class="fa-solid fa-cart-shopping" onclick="addCartItem('<%=id%>')"></i>
             </div>
             <p class="main__section--product-description"><%= name %></p>
         </div>
     </article>    
     </a>
+    <script src="/javascripts/cart.js"></script>
