productEdit cancel product

--- a/estructura de archivos/src/views/products/productEdit.ejs
+++ b/estructura de archivos/src/views/products/productEdit.ejs
@@ -100,7 +100,7 @@
                         </div>
 
                         <div class="form-box buttons">
-                            <button class="total-comprar" type="reset">Cancelar</button>
+                            <button class="total-comprar" type="reset" onclick="reset" >Cancelar</button>
                             <button class="total-comprar" id="editConfirm" type="submit">Confirmar</button>
                             <p id="msgError" class="text-danger" ></p>
                         </div>
@@ -113,6 +113,7 @@
                 <!-- / F O O T E R -->
         
         <script src="/javascripts/productEdit.js"></script>
+        <script src="/javascripts/resetProductEdit.js"></script>
     </body>
 
 </html>
