--- a/estructura de archivos/src/views/partials/modalCart.ejs
+++ b/estructura de archivos/src/views/partials/modalCart.ejs
@@ -27,11 +27,11 @@
         </div>
         <div class="modal-footer">
             <div class="d-flex justify-content-between gap-2">
-                <button type="button" class="btn btn-danger">Vaciar carrito</button>
+                <button type="button" class="btn btn-cart-itemRemove">Vaciar carrito</button>
  
                 <div class="d-flex gap-2">
-                    <button type="button" class="btn btn-success" data-bs-dismiss="modal">Seguir comprando</button>
-                    <button type="button" class="btn btn-primary">Terminar compra</button>
+                    <button type="button" class="btn btn-cart-itemAdd" data-bs-dismiss="modal">Seguir comprando</button>
+                    <button type="button" class="btn btn-cart-itemAdd">Terminar compra</button>
                 </div>
             </div>
         
