productEdit and productLoad cancel done!

--- a/estructura de archivos/src/views/products/productEdit.ejs
+++ b/estructura de archivos/src/views/products/productEdit.ejs
@@ -100,7 +100,7 @@
                         </div>
 
                         <div class="form-box buttons">
-                            <button class="total-comprar" type="reset" onclick="reset" >Cancelar</button>
+                            <button class="total-comprar" type="reset" onclick="window.history.go(-1); return false;">Cancelar</button>
                             <button class="total-comprar" id="editConfirm" type="submit">Confirmar</button>
                             <p id="msgError" class="text-danger" ></p>
                         </div>
