--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -99,7 +99,7 @@
                         </div>
 
                         <div class="form-box buttons">
-                            <button class="total-comprar" type="reset">Cancelar</button>
+                            <button class="total-comprar" type="reset" onclick="window.location.href='/'">Cancelar</button>
                             <button class="total-comprar" type="submit">Agregar</button>
                             <p id="msgError" class="text-danger" ></p>
                         </div>
