--- a/estructura de archivos/src/views/partials/modalCart.ejs
+++ b/estructura de archivos/src/views/partials/modalCart.ejs
@@ -27,7 +27,7 @@
         </div>
         <div class="modal-footer">
             <div class="d-flex justify-content-between gap-2">
-                <button type="button" class="btn btn-cart-itemRemove">Vaciar carrito</button>
+                <button type="button" class="btn btn-cart-itemRemove" onclick="remove()">Vaciar carrito</button>
  
                 <div class="d-flex gap-2">
                     <button type="button" class="btn btn-cart-itemAdd" data-bs-dismiss="modal">Seguir comprando</button>
@@ -37,10 +37,9 @@
         
         </div>
         <% } %>
-         
-        
       </div>
     </div>
+    <script src="../../../javascripts/cart.js"></script>
   </div>
   
   
