productDetails code update!

--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -105,7 +105,7 @@
                                             <button type="button" class="btn">
                                                 Comprar ahora
                                             </button>
-                                            <button type="button" class="btn">
+                                            <button type="button" name="cart"class="btn"onclick="addCartItem('<%=product.id%>')">
                                                 Agregar al carrito <i class="fas fa-shopping-cart"></i>
                                             </button>
                                             <% if (locals.userLogin && userLogin.rol === 1) { %>
