--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -122,43 +122,9 @@
                                 </li>
                             </ul>
                         </li>
-                        <!--<li class="nav-item dropdown">
-                                 Tarjeta de regalo 
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                                    aria-expanded="false">Tarjeta de regalo</a>
-                                <ul class="dropdown-menu tarjetaDeRegalo__move">
-                                    <li>
-                                        <small class="title__nav_item" style="margin-left: 1px">Lista de tarjetas de
-                                            regalo</small>
-                                        <ul class="cointeiner__links_nav_item" style="list-style: none">
-                                            <li><a class="dropdown-item" href="#">Steam Tarjetas</a></li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Xbox Live Tarjetas</a>
-                                            </li>
-                                            <li><a class="dropdown-item" href="#">PSN Juegos</a></li>
-                                            <li><a class="dropdown-item" href="#">PSN Tarjetas</a></li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Tarjetas pavos de Fortnite</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Roblox Robux Tarjetas</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Blizzard Tarjetas</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Google Play Tarjetas</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="#">Otras tarjetas de regalo</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>-->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                                aria-expanded="false">Categorias</a>
+                                aria-expanded="false">Categorías</a>
                             <ul class="dropdown-menu cointeiner__links_nav_item">
                                 <% categories.sort((a, b)=> (a.name > b.name) ? 1 : -1).forEach(category=> { %>
                                     <li>
@@ -182,7 +148,7 @@
                             <li class="nav-item">
                                 <!--  Creación de producto -->
                                 <a class="nav-link active" aria-current="page" href="/products/productsLoad"> Agregar
-                                    producto
+                                    Producto
                                 </a>
                             </li>
                             <% } %>
