--- a/estructura de archivos/src/views/partials/modalCart.ejs
+++ b/estructura de archivos/src/views/partials/modalCart.ejs
@@ -30,7 +30,7 @@
                 <button type="button" class="btn btn-cart-itemRemove" onclick="remove()">Vaciar carrito</button>
  
                 <div class="d-flex gap-2">
-                    <button type="button" class="btn btn-cart-itemAdd" data-bs-dismiss="modal">Seguir comprando</button>
+                    <button type="button" class="btn btn-cart-itemAdd" onclick="window.location.href='/'" data-bs-dismiss="modal">Seguir comprando</button>
                     <button type="button" class="btn btn-cart-itemAdd">Terminar compra</button>
                 </div>
             </div>
