--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -92,7 +92,7 @@
 
                         <div class="form-box load-image product__image--preview">
                             <label class="form__label" for="imagen">Añadir Imágenes:</label>
-                            <div id="image-preview"></div>
+                            <!-- <div id="image-preview"></div> -->
                             <input class="form__input form-control <%= locals.errors && errors.name ? 'is-invalid' : null %>" type="file" name="imagen" id="image" accept="image/*" multiple>
                             <small class="form-error"><%= locals.errors && errors.images ? errors.images.msg : null %></small>
                             <small id="errorImage" class="text-danger"></small>
